# flake8-django-migrations

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  hacktoberfest.yml  poetry-upgrade.yml  semantic-release.yml  upgrader.yml
flake8_django_migrations/: __init__.py  plugin.py
flake8_django_migrations/checkers/: remove_field.py
src/flake8_django_migrations/: __init__.py  plugin.py
src/flake8_django_migrations/checkers/: base.py  issue.py  remove_field.py
templates/: .changelog-old.md  CHANGELOG.md.j2
tests/: test_flake8_django_migrations.py
