[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1" ]

[tool.poetry]
name = "flake8-django-migrations"
version = "1.1.0"
description = "Flake8 plugin to lint for backwards incompatible database migrations"
authors = [ "Bruno Alla <bruno.alla@festicket.com>" ]
license = "MIT"
readme = "README.md"
keywords = [ "flake8", "lint", "django", "migrations" ]
repository = "https://github.com/browniebroke/flake8-django-migrations"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Framework :: Flake8",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = ">=3.7"
astor = ">=0.1"
importlib-metadata = { version = ">=0.9", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.poetry.plugins."flake8.extension"]
DM = "flake8_django_migrations:Plugin"

[tool.ruff]
target-version = "py39"
line-length = 88

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "flake8_django_migrations" ]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=flake8_django_migrations"
pythonpath = [ "src" ]

[tool.coverage.run]
branch = true
source = [ "flake8_django_migrations" ]

[tool.coverage.report]
ignore_errors = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_variables = [
  "src/flake8_django_migrations/__init__.py:__version__",
]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true
